@@ -1,24 +1,15 @@
-import java.util.*;
+import java.util.ArrayList;
+//import List.*;
 
 public class Main {
 	Main() {
 
 	}
 
-//	public static Integer f(Integer x) {
-//		if (x < 1)
-//			return 1;
-//		else
-//			return f(x - 1) + f(x - 2);
-//	}
-
 	public static void main(String[] args) {
-//		Integer x = Integer.valueOf(2);
-//		Integer y = Integer.valueOf(3);
-//		System.out.println(f(x + y));
-//		System.out.println(new ArrayList<Integer>());
-		Boolean a = Boolean.valueOf(2 == 3);
-		Boolean b = Boolean.valueOf(2 == 2);
-		System.out.println(a || b);
+		ArrayList<Object> arr = new ArrayList<>();
+		arr.add(new Integer(2));
+		List L = new List(arr);
+		return;
 	}
 }
